* compile.c (iseq_compile_each): T_IMEMO/iseq objects should be   wrap with ISeq wrappers. [Bug #11676]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52667 b2dd03c8-39d4-4d8f-98ff-823fe69b080e